fix: resolve Gradle Toolchain conflicts and Java 8 API incompatibility
- build.gradle.kts: exclude test modules from sourceCompatibility=1.8;
  test modules manage their own Java version via toolchains
- ElementCollectionTest, ElementCollectionEmbeddableTest: replace Set.of()
  with new HashSet<>(Arrays.asList()) for Java 8 compatibility

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>